k8s/foundation.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines

spec:
  rules:
    - host: tekton.cluster.kuin.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097

---
apiVersion: v1
kind: Service
metadata:
  name: keel-service
  namespace: kube-system

spec:
  selector:
    app: keel
  ports:
    - protocol: TCP
      port: 9300

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-ingress
  namespace: kube-system

spec:
  rules:
    - host: keel.cluster.kuin.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keel-service
                port:
                  number: 9300
